Use overflow: hidden to prevent the buy container from covering the indicator bar in carousel images.

--- a/src/components/ProductPage/ProductPage.css
+++ b/src/components/ProductPage/ProductPage.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: calc(100vh - 18vh);
+  overflow: hidden;
   max-width: 500px;
   position: relative;
 }
@@ -108,7 +109,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 16px;
-  height: calc(100vh - 82vh);
+  height: 18vh;
   box-sizing: border-box;
 }
 
